--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Stackbot</title>
     <script type="text/javascript">
@@ -12,9 +14,15 @@
 </head>
 <body>
 <div align="center">
-    <h1 align="center">Stackbot</h1>
-    <input type="text" id="search_field"/>
-    <button onclick="redirect()">Search</button>
+    <h1>Stackbot</h1>
+    <div class="col-lg-4 col-lg-offset-4">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for..." id="search_field">
+      <span class="input-group-btn">
+        <button class="btn btn-secondary" type="button" onclick="redirect()">Enter</button>
+      </span>
+        </div>
+    </div>
 </div>
 </body>
 </html>
