--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     </script>
 </head>
-<body onload="searchengine()">
+<body>
 <div align="center">
     <h1>Stackbot</h1>
     <div class="col-lg-4 col-lg-offset-4">
@@ -205,6 +205,7 @@
     }
     window.onload = function() {
       initApp();
+      searchengine();
     };
   </script>
 </html>
