PROD-216: Fix the redirection issue when search query comes from a search engine

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     if(response.success == true) window.location = response.payload.redirect;
                 }
             }
-            xmlHttp.open("GET", "http://localhost:8080/api/q?q="+encodeURI(q), true); // true for asynchronous
+            xmlHttp.open("GET", "/api/q?q="+encodeURI(q), true); // true for asynchronous
             xmlHttp.send(null);
         }
         function searchengine(){
