--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="search" type="application/opensearchdescription+xml" title="Stackbot" href="/opensearch.xml" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="UTF-8">
     <title>Stackbot</title>
 </head>
