--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         </div>
     </div>
 </div>
+<br>
+<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header" id="firebase-message-display">
 
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-
-  <!-- Header section containing title -->
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
+  <!--&lt;!&ndash; Header section containing title &ndash;&gt;
+  <header class="mdl-layout__header mdl-color-text&#45;&#45;white mdl-color&#45;&#45;light-blue-700">
+    <div class="mdl-cell mdl-cell&#45;&#45;12-col mdl-cell&#45;&#45;12-col-tablet mdl-grid">
+      <div class="mdl-layout__header-row mdl-cell mdl-cell&#45;&#45;12-col mdl-cell&#45;&#45;12-col-tablet mdl-cell&#45;&#45;8-col-desktop">
         <a href="/"><h3>Firebase Authentication</h3></a>
       </div>
     </div>
-  </header>
+  </header>-->
 
   <main class="mdl-layout__content mdl-color--grey-100">
     <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
@@ -38,10 +38,10 @@
       <!-- Container for the demo -->
       <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
         <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-          <h2 class="mdl-card__title-text">GitHub Authentication with Popup</h2>
+          <h2 class="mdl-card__title-text">GitHub Authentication</h2>
         </div>
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <p>Sign in with your GitHub account below.</p>
+          <p id="welcome-message">Sign in with your GitHub account below.</p>
 
           <!-- Button that handles sign-in/sign-out -->
           <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="quickstart-sign-in">Sign in with GitHub</button>
