--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           <!-- Container where we'll display the user details -->
           <div class="quickstart-user-details-container">
             Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-            <div>Firebase auth <code>currentUser</code> object value:</div>
+            <!--<div>Firebase auth <code>currentUser</code> object value:</div>
             <pre><code id="quickstart-account-details">null</code></pre>
             <div>GitHub OAuth Access Token:</div>
-            <pre><code id="quickstart-oauthtoken">null</code></pre>
+            <pre><code id="quickstart-oauthtoken">null</code></pre>-->
           </div>
         </div>
       </div>
