PROD-220: Change the Enter button to Search to make more sense.
* Add id to the search button so that it can be used by an event listener
  later

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search for..." id="search_field">
       <span class="input-group-btn">
-        <button class="btn btn-secondary" type="button" onclick="submit();">Enter</button>
+        <button class="btn btn-secondary" type="button" onclick="submit();" id="search-button">Search</button>
       </span>
         </div>
     </div>
