--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Stackbot</h1>
     <div class="col-lg-4 col-lg-offset-4">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for..." id="search_field">
+            <input type="text" class="form-control" placeholder="Search for..." id="search-field">
       <span class="input-group-btn">
         <button class="btn btn-secondary" type="button" onclick="submit();" id="search-button">Search</button>
       </span>
