--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="UTF-8">
+    <meta name="description" content="A new way to search for the developers.">
+    <meta name="keywords" content="search,search engine, developer search engine, code search engine">
     <title>Stackbot</title>
 </head>
 <body>
