--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="search" type="application/opensearchdescription+xml" title="Stackbot" href="/opensearch.xml" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <meta charset="UTF-8">
     <meta name="description" content="A new way to search for the developers.">
     <meta name="keywords" content="search,search engine, developer search engine, code search engine">
@@ -66,8 +66,8 @@
 <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
-<script src="script.js"></script>
-<script src="firebase.js"></script>
+<script src="/js/script.js"></script>
+<script src="/js/firebase.js"></script>
 <script type="text/javascript">
     window.onload = function() {
       initApp();
