--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Fake</title>
+  <title>Stackbot</title>
   <base href="/">
 
   {{#unless environment.production}}
