--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-  <app-root>Loading...</app-root>
-  
+  <search>Loading...</search>
+  <app-root></app-root>
+
     {{#each scripts.polyfills}}
     <script src="{{.}}"></script>
     {{/each}}
