PROD-230: Create a new ReportComponent to hold the components related to reports.
* Registered this component with 'report' selector.
* The HTML template of this component is empty at this point.
* Bootstrapped this component in the main.ts file so that it is accessible.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,6 +15,7 @@
 <body>
   <search>Loading...</search>
   <app-root></app-root>
+  <report></report>
 
     {{#each scripts.polyfills}}
     <script src="{{.}}"></script>
