--- a/frontend/src/unit-tests.html
+++ b/frontend/src/unit-tests.html
@@ -17,6 +17,6 @@
     <script src="https://code.angularjs.org/2.0.0-beta.7/testing.dev.js"></script>
 </head>
 <body>
-<script src="../dist/1st.spec.js"></script>
+<script src="../dist/basic.spec.js"></script>
 </body>
 </html>
