PROD-224: Write a test for redirect

--- a/frontend/src/unit-tests.html
+++ b/frontend/src/unit-tests.html
@@ -7,16 +7,10 @@
     <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
-    <!-- Angular 2 dependencies -->
-    <script src="https://code.angularjs.org/tools/system.js"></script>
-    <script src="https://code.angularjs.org/tools/typescript.js"></script>
-    <script src="config.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.7/angular2-polyfills.min.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-beta.7/angular2.js"></script>
-    <!-- Angular 2 testing dependencies -->
-    <script src="https://code.angularjs.org/2.0.0-beta.7/testing.dev.js"></script>
 </head>
 <body>
 <script src="../dist/basic.spec.js"></script>
+<script src="../dist/app/redirect.service.js"></script>
+<script src="../dist/app/redirect.service.spec.js"></script>
 </body>
 </html>
