--- a/frontend/src/unit-tests.html
+++ b/frontend/src/unit-tests.html
@@ -3,14 +3,14 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <title>Ng App Unit Tests</title>
-    <link rel="stylesheet" href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
-    <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
-    <script src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
-    <script src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
+    <link rel="stylesheet" href="vendor/jasmine-core/lib/jasmine-core/jasmine.css">
+    <script src="vendor/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+    <script src="vendor/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+    <script src="vendor/jasmine-core/lib/jasmine-core/boot.js"></script>
 </head>
 <body>
-<script src="../dist/basic.spec.js"></script>
-<script src="../dist/app/redirect.service.js"></script>
-<script src="../dist/app/redirect.service.spec.js"></script>
+<script src="basic.spec.js"></script>
+<script src="app/redirect.service.js"></script>
+<script src="app/redirect.service.spec.js"></script>
 </body>
 </html>
