--- a/default/src/index.html
+++ b/default/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Stackbot</title>
   <base href="/">
+  <meta name="description" content="For developers: a new way to search.">
+  <meta name="keywords" content="search, search engine, developer search engine, code search engine">
 
   {{#unless environment.production}}
   <!--<script src="/ember-cli-live-reload.js" type="text/javascript"></script>-->
