PROD-249: Immediately redirect the user to https via JS if not at localhost.

--- a/default/src/index.html
+++ b/default/src/index.html
@@ -13,6 +13,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script>
+    // Redirect to https immediately.
+    if (window.location.protocol !== 'https' && !window.location.host.includes('localhost')) {
+        console.log('redirect to https');
+        window.location.protocol = 'https';
+    }
+  </script>
 </head>
 <body>
   <app-root>Loading...</app-root>
