--- a/default/src/index.html
+++ b/default/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script>
     // Redirect to https immediately.
-    if (window.location.protocol !== 'https' && !window.location.host.includes('localhost')) {
+    if (window.location.protocol !== 'https:' && !window.location.host.includes('localhost')) {
         console.log('redirect to https');
         window.location.protocol = 'https';
     }
