--- a/default/src/index.html
+++ b/default/src/index.html
@@ -9,6 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.2.0/material.cyan-pink.min.css" />
+  <script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
   <script>
     // Redirect to https immediately.
     if (window.location.protocol !== 'https:' && !window.location.host.includes('localhost')) {
@@ -17,7 +22,7 @@
     }
   </script>
 </head>
-<body>
+<body style="background-color: #f0f0f0!important;">
   <app-root>Loading...</app-root>
 
 <script>
